ADMIN FUNCTIONALITIES COMMIT 4